# ai-rag-resume-app

./: README.md  docker-compose.yml
ai/: .env.example  .gitignore  pyproject.toml  test_scoring.py  test_upload.py
ai/app/: main.py
ai/app/api/: chat.py  jobs.py  resumes.py
ai/app/chains/: design_chain.py  extraction_chain.py  rag_chain.py  scoring_chain.py  summary_chain.py
ai/app/config/: config.py
ai/app/core/: design_chain.py  extraction_chain.py  prompt.py  rag_chain.py  scoring_chain.py  summary_chain.py
ai/app/db/: database.py
ai/app/models/: domain.py  schemas.py
ai/app/services/: document_parser.py  resume_pipeline.py
ai/app/vector_store/: vector_store.py
ai/chroma_data/: chroma.sqlite3
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/jobs/: route.ts
frontend/src/app/api/jobs/[id]/: route.ts
frontend/src/app/api/resumes/candidates/: route.ts
frontend/src/app/api/resumes/candidates/[id]/: route.ts
frontend/src/app/api/resumes/upload/: route.ts
frontend/src/app/candidates/[id]/: page.tsx
frontend/src/app/candidates/upload/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/app/jobs/create/: page.tsx
frontend/src/components/: AssistantChat.tsx  Sidebar.tsx
frontend/src/components/feature/: AssistantChat.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/ui/: table.tsx
frontend/src/styles/: globals.css
(+2 files in other folders)
